examples/test/testpolicy18188.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18188
  namespace: namespace441
spec:
  podSelector:
    matchLabels:
      key25: value36
      key19: value8
      key27: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value19
      podSelector:
        matchLabels:
          key48: value28
          key7: value33
          key21: value2
